testing: event handler multiple

--- a/src/eventsp1testing/appjs_event1test.css
+++ b/src/eventsp1testing/appjs_event1test.css
@@ -13,17 +13,17 @@ body {
     text-align: center;
 }
 
-/* start da css for da buttons */
 .btn {
     border-radius: 5px;
     border: none;
-    padding: 15px 25px;
-    font-size: 22px;
+    padding: 15px 15px;
+    font-size: 16px;
     text-decoration: none;
-    margin: 20px;
+    margin: 18px;
     color: #fff;
     position: relative;
     display: inline-block;
+    font-weight: bold;
 }
 
 .btn:active {
